v1.2.0
- Fixed a bug that caused the GUI button to not be added when a mod change
occures

v1.1.0
- Minor corrections to the technology pre-requisites when using Bobs mods courtesy of KiwiHawk.

v1.1.0
- Version 1.1 compatibility

v1.0.0
- Correction to assembly robot icon size

v0.5.1
- Russian language translation update

v0.5.0
- Version 0.18 compatibility

v0.4.4
- Changes dependencies to accomodate Bob;s new Personnal Equipment Mod.  You now need Personnal Equipment.  You now do not need Warfare.  If personnal equipment mod is missing, then the Bob;s mods recipes will not be activated.

v0.4.3
- Adds new map mod settings (ie change while playing) to allow for the suppression of the narrative messages.  Suppress narrative Popups will remove the message after completion of the satellite network and completion of the drydock.  Auto continue will suppress the final message and automatically choose to continue with another launch (Ie Bring it on).

v0.4.2
- Fixed the missing descriptions on technologies ftl D1 and ftl D2
- Added thumbnail

v0.4.1
- Compatibility for 0.17 extended for bob's mods

v0.4.0
- Compatibility for v0.17 (not including bob's mods)

v0.3.18 
- Fixes invalid entity error on spacex combinator 
- Fixes text on the Habitation component description

v0.3.15
- technology icon resolution upgrade coutesy of drd_avel

v0.3.14
- Fixes a crash if spacex combinator is placed prior to launching a single rocket.
- Adds command "Get_log_file" which will write your SpaceX log out to the script-output folder.

v0.3.13 Redacted

v0.3.12
- Fixes a rare crash on rocket launch event.

v0.3.11
- Fixes an error on game close out

v0.3.10
- Added Russian language support courtesy of Zerggurat
- Performance issues with the SpaceX combinator resolved

v0.3.9 Redacted

v0.3.8
- Remove spacex combinator debug information

v0.3.7
- improved grammar in flavour text