@@ -24,6 +24,9 @@ gnc-tooltip=Removes this dialog box
 drydock-title=Drydock Completed
 drydock-tooltip=Removes this dialog box
 spacex-notadmin-tooltip=Only admins can make this decision.  This button will close your dialog box.
+ctn-title=Prevent Popups
+ctn-text=Hint: In mod settings you can disable the story popups and activate auto-continua mode!
+ctn-tooltop=Closes this dialog box
 
 [technology-name]
 space-assembly=Space Assembly
