@@ -1,6 +1,8 @@
 v1.2.0
 - Fixed a bug that caused the GUI button to not be added when a mod change
 occures
+- Added a popup window after the first completion to give a hint about the
+auto-continue and disable popup option
 
 v1.1.0
 - Minor corrections to the technology pre-requisites when using Bobs mods courtesy of KiwiHawk.
